--- a/preview.html
+++ b/preview.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的個人作品集</title>
+    <title>EJ's home</title>
     <style>
         /* 基本重置和全域樣式 */
         * {
