--- a/preview.html
+++ b/preview.html
@@ -343,7 +343,7 @@
                         </div>
                     </div>
                     <div class="about-text">
-                        <h3>我是一位快樂的大學生</h3>
+                        <h3>我是一個還在尋找興趣的大學生</h3>
                         <p>
                             喜歡打排球、寫程式、看動漫。
                         </p>
