--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的個人作品集</title>
+    <title>EJ's home</title>
     <style>
         /* 基本重置和全域樣式 */
         * {
@@ -343,7 +343,7 @@
                         </div>
                     </div>
                     <div class="about-text">
-                        <h3>我是一位快樂的大學生</h3>
+                        <h3>我是一個還在尋找興趣的大學生</h3>
                         <p>
                             喜歡打排球、寫程式、看動漫。
                         </p>
